--- a/packages/outline-example/src/index.css
+++ b/packages/outline-example/src/index.css
@@ -66,6 +66,10 @@ h1 {
   position: relative;
 }
 
+.editor-shell div.editor > p span {
+  display: inline-block;
+}
+
 .editor-shell div.editor h1 {
   font-size: 24px;
   color: rgb(5, 5, 5);
